:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.8.2\...HEAD[Unreleased]

=== Added

* Add benchmarks ({pull-request-url}/121[#121])

== {compare-url}/v0.8.1\...v0.8.2[0.8.2] - 2024-09-22

=== Added

* Add `ExitCode::BASE` and `ExitCode::MAX` constants
  ({pull-request-url}/118[#118])

== {compare-url}/v0.8.0\...v0.8.1[0.8.1] - 2024-07-03

=== Changed

* Rewrite the examples using `clap` ({pull-request-url}/97[#97])
* Bump MSRV to 1.74.0 ({pull-request-url}/97[#97])

== {compare-url}/v0.7.14\...v0.8.0[0.8.0] - 2024-06-05

=== Added

* Add conversion methods for integers to `ExitCode` ({pull-request-url}/92[#92])

=== Changed

* Bump MSRV to 1.65.0 ({pull-request-url}/92[#92])
* Move `TryFromExitStatusError` to `error` ({pull-request-url}/93[#93])

== {compare-url}/v0.7.13\...v0.7.14[0.7.14] - 2024-05-19

=== Changed

* Split `exit_code.rs` into submodules ({pull-request-url}/87[#87])
* Make `Result` type always available ({pull-request-url}/89[#89])

== {compare-url}/v0.7.12\...v0.7.13[0.7.13] - 2024-04-16

=== Added

* Add link to `true` ({pull-request-url}/84[#84])

== {compare-url}/v0.7.11\...v0.7.12[0.7.12] - 2024-04-08

=== Changed

* Change position of `package.metadata.docs.rs`

== {compare-url}/v0.7.10\...v0.7.11[0.7.11] - 2024-01-18

=== Changed

* Change copyright notice in `LICENSES/MIT.txt`

== {compare-url}/v0.7.9\...v0.7.10[0.7.10] - 2024-01-06

=== Changed

* Update doctests ({pull-request-url}/72[#72])

== {compare-url}/v0.7.8\...v0.7.9[0.7.9] - 2024-01-06 [YANKED]

=== Changed

* Update doctests ({pull-request-url}/71[#71])

== {compare-url}/v0.7.7\...v0.7.8[0.7.8] - 2024-01-05

=== Fixed

* Fix clippy warnings for examples ({pull-request-url}/70[#70])
